--- a/package.json
+++ b/package.json
@@ -38,10 +38,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "ejs": "^2.5.2",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
     "mobx-react-devtools": "^4.2.0",
+    "mobx-react-router": "^3.0.0",
+    "mobx-router": "0.0.6",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-router": "^3.0.0",
+    "superagent": "^3.0.0",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
