--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,17 @@
 {
-  "ecmaFeatures": {
-    "jsx": true,
-    "modules": true
-  },
+  "extends": "airbnb",
+  "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true
-  },
-  "parser": "babel-eslint",
-  "rules": {
-    "quotes": [2, "single"],
-    "strict": [2, "never"],
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/jsx-no-undef" : 2,
-    "react/react-in-jsx-scope": 2,
-  },
-  "plugins": [
-    "react"
-  ]
+    "node": true,
+    "mocha": true,
+   },
+   "ecmaFeatures": {
+    "jsx": true
+   },
+   "rules": {
+    "no-console": 0,
+    "global-require": 0,
+    "comma-dangle": 0,
+   }
 }
