--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for MobX + React project with JSX, ES6 compilation and hot code reloading",
   "scripts": {
     "start": "node server.js",
+    "build:vendor": "webpack --config ./configs/dll.config.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -41,6 +42,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "assets-webpack-plugin": "^3.5.0",
     "ejs": "^2.5.2",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
