--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "build:vendor": "webpack --config ./configs/dll.config.js",
+    "build": "NODE_ENV=production node server.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -43,7 +44,10 @@
   },
   "dependencies": {
     "assets-webpack-plugin": "^3.5.0",
+    "autoprefixer": "^6.5.3",
     "ejs": "^2.5.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.24.1",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
     "mobx-react-devtools": "^4.2.0",
