--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "eslint": "^3.1.0",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^1.10.0",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
