--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^1.10.0",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
+    "generate-asset-webpack-plugin": "^0.3.0",
     "json-server": "^0.9.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "webpack": "^1.13.1",
