--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.7.2",
     "eslint": "^3.1.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.6.1",
@@ -42,6 +44,7 @@
     "ejs": "^2.5.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "lowdb": "^0.14.0",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
     "mobx-react-devtools": "^4.2.0",
