--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "assets-webpack-plugin": "^3.5.0",
     "autoprefixer": "^6.5.3",
+    "classnames": "^2.2.5",
     "ejs": "^2.5.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
