--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "assets-webpack-plugin": "^3.5.0",
     "autoprefixer": "^6.5.3",
     "classnames": "^2.2.5",
+    "css-loader": "^0.26.0",
     "ejs": "^2.5.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
@@ -51,9 +52,12 @@
     "mobx-react-devtools": "^4.2.0",
     "mobx-react-router": "^3.0.0",
     "mobx-router": "0.0.6",
+    "node-sass": "^3.13.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^3.0.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "superagent": "^3.0.0",
     "webpack-hot-middleware": "^2.13.2"
   }
