--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mobx-react-router": "^3.0.0",
     "mobx-router": "0.0.6",
     "node-sass": "^3.13.0",
+    "postcss-loader": "^1.1.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^3.0.0",
