--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,5 @@
     "es2015",
     "stage-0"
   ],
-  "plugins": ["transform-decorators-legacy", "react-hot-loader/babel"]
+  "plugins": ["transform-decorators-legacy", "react-hot-loader/babel", ['import', { libraryName: 'antd', style: 'less' }]]
 }
