--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mobx",
     "starter-kit"
   ],
+  "theme": {
+    "@primary-color": "#1DA57A"
+  },
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.9.1",
@@ -39,13 +42,17 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "antd": "^2.5.0",
     "assets-webpack-plugin": "^3.5.0",
     "autoprefixer": "^6.5.3",
+    "babel-plugin-import": "^1.1.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
     "ejs": "^2.5.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lowdb": "^0.14.0",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
@@ -60,6 +67,8 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "superagent": "^3.0.0",
+    "todomvc-app-css": "^2.0.1",
+    "todomvc-common": "^1.0.2",
     "webpack-hot-middleware": "^2.13.2"
   }
 }
